
/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
option java_multiple_files = true;
package io.lightcone.data.types;


message AccountID {
    uint32 value = 1;
}

message TokenID {
    uint32 value = 1;
}

message OrderID {
    uint32 value = 1;
}

message Amount {
    bytes  value = 1;
}

message Address {
    string value = 1;
}

message TxData {
    string value = 1;
}

message Nonce {
    uint32 value = 1;
}

message Percentage {
    int32  value = 1;
}

message MiMCHash {
    bytes  value = 1;
}

message SHA256Hash {
    bytes  value = 1;
}

message Proof {
    repeated types.MiMCHash data = 1;
    uint64   cost_seconds        = 2;
}

message EdDSAPrivKey {
    bytes value = 1;
}

message EdDSAPubKey {
    bytes x = 1;
    bytes y = 2;
}

message EdDSASignature {
    bytes rx = 1;  // 256bit
    bytes ry = 2;  // 256bit
    bytes s  = 3;  // 256bit
}

message Paging {
    uint32  num     = 1;
    uint32  skip    = 2;
}

message CursorPaging {
    uint32  num     = 1;
    uint64  cursor  = 2;
}

message Account {
    Address     owner                               = 1;
    EdDSAPubKey pub_key                             = 2;
}

message Token {
    Address     token                               = 1;
    bool        deposit_isabled                     = 2;
}

enum ErrorCode{
    ERR_NONE                = 0;
    ERR_INTERNAL_UNKNOWN    = 1;
    ERR_INVALID_ARGUMENT    = 2;

    //1001 -- 2000 ethereum Error
    ERR_ETHEREUM_ILLEGAL_ADDRESS        = 1001;
    ERR_NO_ACCESSIBLE_ETHEREUM_NODE     = 1002;
    ERR_UNEXPECTED_RESPONSE             = 1003;
    ERR_INVALID_SIG                     = 1004;

    //2001 -- 3000 Block Error
    ERR_BLOCK_UNRECOGNIZED_TYPE         = 2001;
    ERR_COMMITTER_NOT_READY             = 2002;

    //3001 -- 4000 persistence Error
    ERR_PERSISTENCE_INVALID_DATA        = 3001;
    ERR_PERSISTENCE_DUPLICATE_INSERT    = 3002;
    ERR_PERSISTENCE_UPDATE_FAILED       = 3003;
    ERR_PERSISTENCE_INTERNAL            = 3004;

}

message Error{
    ErrorCode code = 1;
    string message = 2;
}

